package towers.characters;

import towers.CharacterFactories.ICharacter;

public class Persephone implements ICharacter {

	@Override
	public int[] getData() {
		return new int[] {370,65,39,0,0}; //hp,power,def,pen,cd
	}

}
